force-app/main/default/objects/Libros__c/Libros__c.object-meta.xml
<CustomObject>
    <label>Libros</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Libros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>