force-app/main/default/objects/Libros__c/fields/editorial__c.field-meta.xml
<CustomField>
    <fullName>editorial__c</fullName>
    <label>Editorial</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>