force-app/main/default/objects/Libros__c/fields/portada_imagen__c.field-meta.xml
<CustomField>
    <fullName>portada_imagen__c</fullName>
    <formula>IMAGE(portada_url__c,&quot;imagen&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portada Imagen</label>
    <type>Text</type>
</CustomField>