force-app/main/default/objects/Libros__c/fields/portada_url__c.field-meta.xml
<CustomField>
    <fullName>portada_url__c</fullName>
    <label>Portada URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>